--- a/en/meta.yml
+++ b/en/meta.yml
@@ -14,4 +14,9 @@ site_areas:
 steps:
   - title: "Introduction"
   - title: "What you will need"
-  
+  - title: "Registering with Weather Underground"
+  - title: "The Weather Underground upload protocol"
+  - title: "Using Python to convert your data"
+  - title: "Using Python to upload your data"
+  - title: "Testing"
+  - title: "What next?"
