--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,17 +1,22 @@
-title: uploading-weather-data-to-weather-underground-v2
+title: Uploading weather data to Weather Underground
 hero_image: images/banner.png
-description: uploading-weather-data-to-weather-underground-v2 description
-original_url: https://codeclubprojects.org/en-GB/scratch/rock-band
-theme: red # possible values: blue, green, navy, orange, red, turquoise, violet, yellow
-duration: 1 # possible values: 1, 2 or 3
+description: Upload your own climate measuremets to Weather Underground
+original_url:
+theme: orange
+duration: 2
 listed: false
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-interests: "games, jokes/pranks, music/sound, photography, physical computing, robots, space"
-technologies: "electronics, sense-hat, physical computing, html/css, scratch, python"
+interests: "weather"
+technologies: "web"
+curriculum: creator
 site_areas:
 steps:
-  - title: Introduction
-  - title: What you will need
-  - title: Step title
+  - title: "Introduction"
+  - title: "What you will need"
+  - title: "Registering with Weather Underground"
+  - title: "The Weather Underground upload protocol"
+  - title: "Using Python to convert your data"
+  - title: "Using Python to upload your data"
+  - title: "Testing"
+  - title: "What next?"
