Added code examples

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,5 +18,5 @@ steps:
   - title: The Weather Underground upload protocol
   - title: Using Python to convert your data
   - title: Using Python to upload your data
-  - title: Testing
-  - title: What next?
+  - title: Using live data
+  - title: Challenge: Weather Underground widgets
