--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,4 +19,4 @@ steps:
   - title: Using Python to convert your data
   - title: Using Python to upload your data
   - title: Using live data
-  - title: Challenge: Weather Underground widgets
+  - title: Challenge: add weather stickers to your website
