--- a/en/meta.yml
+++ b/en/meta.yml
@@ -15,8 +15,8 @@ steps:
   - title: Introduction
   - title: What you will need
   - title: Registering with Weather Underground
-  - title: Uploading data to Weather Underground 
+  - title: Uploading data to Weather Underground
   - title: Using Python to convert your data
   - title: Using Python to upload your data
   - title: Using live data
-  - title: Challenge: add weather stickers to your website
+  - title: 'Challenge: add weather stickers to your website'
