--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,7 +4,7 @@ description: Upload your climate measurements to Weather Underground
 original_url:
 theme: orange
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 interests: "weather"
