update web tag to html-css

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,7 +8,7 @@ listed: true
 ingredient: false
 copyedit: true
 interests: "weather"
-technologies: "web"
+technologies: "html-css"
 curriculum: creator
 site_areas:
 steps:
