--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,7 +8,7 @@ listed: true
 ingredient: false
 copyedit: true
 interests: "weather"
-technologies: "html-css"
+technologies: "html/css"
 curriculum: creator
 site_areas:
 steps:
