--- a/en/meta.yml
+++ b/en/meta.yml
@@ -9,7 +9,7 @@ ingredient: false
 copyedit: true
 interests: "weather"
 technologies: "html/css"
-curriculum: creator
+curriculum: creator, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 site_areas:
 steps:
 
