--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,7 +4,7 @@ description: Upload your climate measurements to Weather Underground
 original_url: 
 theme: orange
 duration: 2
-listed: true
+listed: false
 ingredient: false
 copyedit: true
 interests: ''
